RESOLVED FIXED164015
MediaPayload does not need to be refcounted
https://bugs.webkit.org/show_bug.cgi?id=164015
Summary MediaPayload does not need to be refcounted
youenn fablet
Reported 2016-10-26 08:10:04 PDT
MediaPayload does not need to be refcounted
Attachments
Patch (23.97 KB, patch)
2016-10-26 08:12 PDT, youenn fablet
no flags
Patch (30.32 KB, patch)
2016-10-26 08:33 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2016-10-26 08:12:20 PDT
youenn fablet
Comment 2 2016-10-26 08:33:22 PDT
WebKit Commit Bot
Comment 3 2016-10-27 00:34:05 PDT
Comment on attachment 292929 [details] Patch Clearing flags on attachment: 292929 Committed r207952: <http://trac.webkit.org/changeset/207952>
WebKit Commit Bot
Comment 4 2016-10-27 00:34:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.